--- a/sections/assos.tex
+++ b/sections/assos.tex
@@ -1,4 +1,4 @@
-{\fontsize{13}{10}\selectfont \color{black} \textbf{Volunteering}}
+{\fontsize{15}{10}\selectfont \color{black} \textbf{Volunteering}}
 
 % %Ker'bab previous
 % \begin{tabular}{p{\dateCol} >{\raggedright\arraybackslash}p{\infoCol}}
@@ -11,7 +11,7 @@
 % Ker'bab
 {\color{black} \textbf{President}} \hspace{5mm} \MYhref[myOrange]{https://www.facebook.com/al.ker.bab/}{\textbf{Kebab Club}} \hfill {\color{black}\textbf{2021 - 2022}}\\ \vspace{1mm}
 \begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
-    & {\tiny \ding{110}} \textit{Weekly sale of a hundred homemade kebabs on campus with a team of 8 other students.} \\
+    & {\tiny \ding{110}} \textit{Weekly sale of a hundred of homemade kebabs on campus with a team of 8 other students.} \\
     & {\tiny \ding{110}} \textit{\textbf{Organizing the logistics and communication} of each event with a focus on hygien and security.} \\
     & {\tiny \ding{110}} \textit{Creating new partners relationship with local actors to have fresh products.}
 \end{tabular}
@@ -24,29 +24,37 @@
     & {\tiny \ding{110}} \textit{The events : concerts by students and local musicians, western France cultural events, a week of artistic events with local performers, a cultural trip in Amsterdam for 90 students.}
 \end{tabular}
 
+\if \mainExp0
 %S&L
 {\color{black} \textbf{Sound \& Light Manager}} \hspace{5mm} \MYhref[myOrange]{https://www.facebook.com/people/SL-IMT-Atlantique-Brest/100077578935962/}{\textbf{S\&L Club}} \hfill {\color{black}\textbf{2021 - 2022}}\\ \vspace{1mm}
 \begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
-    & {\tiny \ding{110}} \textit{Technical and security manager for setting up events} \\
-    & {\tiny \ding{110}} \textit{Writing security files to prepare the }
+    & {\tiny \ding{110}} \textit{\textbf{Technical installation of electrical equipment} providing sound and lighting for events, including acoustic preparation of amplifiers based on the venue and configuration of ambient lighting} \\
+    & {\tiny \ding{110}} \textit{Drafting \textbf{security files} for all events to prevent risks caused by the gathering of large crowds during events}
 \end{tabular}
+\fi
 
+\if \mainExp0
 %BDD
 {\color{black} \textbf{Project Manager}} \hspace{5mm} \MYhref[myOrange]{https://bdd-imta.hubside.fr/}{\textbf{Sustainable Development Bureau}} \hfill {\color{black}\textbf{2021 - 2022}}\\ \vspace{1mm}
 \begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
        & {\tiny \ding{110}} \textit{Bike-sharing projet : managing the renting system, maintaining the parc et do paperwork} \\
        & {\tiny \ding{110}} \textit{Orchard Project: Maintenance and planting of apple tree samplings on campus / teaching to students how to take care of an orchard} \\
 \end{tabular}
+\fi
 
+\if \mainExp0
 %Renovo
 {\color{black} \textbf{Mathematics and Physics Teacher}} \hspace{5mm} \MYhref[myOrange]{https://www.renovo.fr/}{\textbf{Renovo}} \hfill {\color{black}\textbf{2016 - 2022}}\\ \vspace{1mm}
 \begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
     & {\tiny \ding{110}} \textit{Teaching to classes of students from disadvantaged neighborhoods during the holidays} \\
     & {\tiny \ding{110}} \textit{Cultural and inspiring outings in museum and local startups and companies with the students}
 \end{tabular}
+\fi
 
+\if \mainExp0
 %Ensemble pour l'Avenir
 {\color{black} \textbf{Food Assistance}} \hspace{5mm} \MYhref[myOrange]{http://ensemblepourlavenir1.free.fr/}{\textbf{Ensemble pour l'Avenir}} \hfill {\color{black}\textbf{2012 - 2016}}\\ \vspace{1mm}
 \begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
     & {\tiny \ding{110}} \textit{Preparation and meal services of 150 covers per evening to homeless people during summer holidays}
 \end{tabular}
+\fi
