--- a/sections/centres d'interet.tex
+++ b/sections/centres d'interet.tex
@@ -17,4 +17,4 @@
 \begin{itemize}
     \item[\tiny\ding{110}] \textit{videogames' design (12y), bassist in a groupe (5y), theater at the Paris' Conservatory (4y), cinema talkshows (8y)}
 \end{itemize}
-\vspace{2mm}
+% \vspace{2mm}
