--- a/sections/exp_pro.tex
+++ b/sections/exp_pro.tex
@@ -1,22 +1,48 @@
-{\fontsize{13}{10}\selectfont \color{black} \textbf{Experience}}
+{\fontsize{15}{10}\selectfont \color{black} \textbf{Experience}}
 
-
-%  SIMULANDS
-{\color{black} \textbf{Software Engineer Intern}} \hspace{5mm} \MYhref[myOrange]{https://www.simulands.com/}{\textbf{SIMULANDS}} \hfill {\color{black}\textbf{October 2023 - March 2024}}\\ \vspace{1mm}
+% Bertin Technologies
+{\color{black} \textbf{FPGA Engineer Intern}} \hspace{5mm} \MYhref[myOrange]{https://www.bertin-technologies.com/}{\textbf{Bertin Technologies}} \hfill {\color{black}\textbf{March 2024 - August 2024}}\\ \vspace{1mm}
 \begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
-    & {\tiny \ding{110}} \textit{A Swiss medtech startup that develops Human Grade simulators that replicate real procedural experiences with accurate device performance insights.} \\
-    & {\tiny \ding{110}} \textit{Mixed Reality Software developement : training a \textbf{Deep Learning segmentation model to track hands and surgical tools} and developing a stereovision algorithm to estimate their position / \textbf{optimizing the model and parallelizing the algorithm} to ensure \textbf{real time computation} / \textbf{designing hardware and software architecture} to improve computation / optimizing the software setup for stabilization / building AR Unity scenes / gamifying procedures to ease the learning curve.} \\
-    & {\tiny \ding{110}} \textit{Database administration : migrating our subcontractor's database / creating a pipeline to perform redundant statistic analysis instead of the marketing team / training analysis to give insights on the trainings.} \\
+    & {\tiny \ding{110}} \textit{Bertin Technologies is a French compnay which pursues technological advances in the fields of Nuclear, Defence, Space, Big Science, Life Sciences and Health.} \\
+    & {\tiny \ding{110}} \textit{Video enhancement algorithms R\&D : Reading research papers, \href{https://github.com/n2oblife/proto_video_algo_ir}{testing (matlab and python) and then \textbf{implementing in VHDL non uniformity correction} for the next generation of IR-camera}, \textbf{defective pixels detection algorithm with low ressources} in pre existing projects, \textbf{writing a driver and interuption process in C with a RISC-V}.} \\
+    & {\tiny \ding{110}} \textit{Shadowing of the product owner during meetings and project plannings.} \\
 \end{tabular}
 
+%  SIMULANDS
+\if \mainExp0
+{\color{black} \textbf{Software Engineer Intern}} \hspace{5mm} \MYhref[myOrange]{https://www.simulands.com/}{\textbf{SIMULANDS}} \hfill {\color{black}\textbf{October 2023 - December 2023}}\\ \vspace{1mm}
+\begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
+    & {\tiny \ding{110}} \textit{A Swiss medtech startup that develops Human Grade simulators that replicate real procedural experiences with accurate device performance insights.} \\
+    & {\tiny \ding{110}} \textit{Mixed Reality Software R\&D and development : SotA benchmark, implementing a \href{https://github.com/n2oblife/Le_ViP}{\textbf{Classical computer vision algorithm in C++ to segment and track surgical tools} with denoising and developpement of a position estimation algorithms} / \textbf{algorithm optimization and parallelization} to ensure \textbf{real time computation} / \textbf{designing software architecture accordingly to hardware} to improve computation / integration of the computer vision application in the previous pipeline between the video stream and Unity / building AR Unity scenes / gamifying procedures to ease the learning curve / cybersecurity consulting to enhance safety of the project} \\
+    & {\tiny \ding{110}} \textit{Database administration : migrating our subcontractor's database on Azure / creating a pipeline to perform redundant statistic analysis instead of the marketing team / data analysis of the trainings to give insights} \\
+\end{tabular}
+\else
+{\color{black} \textbf{Software Engineer Intern}} \hspace{5mm} \MYhref[myOrange]{https://www.simulands.com/}{\textbf{SIMULANDS}} \hfill {\color{black}\textbf{October 2023 - December 2023}}\\ \vspace{1mm}
+\begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
+    & {\tiny \ding{110}} \textit{A Swiss medtech startup that develops Human Grade simulators that replicate real procedural experiences with accurate device performance insights.} \\
+    & {\tiny \ding{110}} \textit{Mixed Reality Software R\&D and development : SotA benchmark, implementing a \textbf{Classical computer vision algorithm in C++ to segment and track surgical tools} with denoising and developpement of a position estimation algorithms / \textbf{algorithm optimization and parallelization} / integration of the computer vision application in the previous project } \\
+    & {\tiny \ding{110}} \textit{Database administration : migrating our subcontractor's database on Azure / creating a pipeline to perform statistic analysis} \\
+\end{tabular}
+\fi
+
 % CEA
+\if \mainExp0
 {\color{black} \textbf{Research Assistant Intern}} \hspace{5mm} \MYhref[myOrange]{https://list.cea.fr/fr/}{\textbf{CEA List}} \hfill {\color{black} \textbf{April 2023 - August 2023}}\\ \vspace{1mm}
 \begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
     & {\tiny \ding{110}} \textit{A research institute that focuses on digital systems to drive business competitiveness. Its Text and Image Analysis Laboratory studies Deep Learning models, their improvement and their use.} \\
-    & {\tiny \ding{110}} \textit{Project : Researching a \textbf{state-of-the-art Transformer based NLP model} / \href{https://github.com/n2oblife/OpenNMT-py_deeplima}{developing its training pipeline in Python and implementating its conversion in C++} / training the model with CEA's cluster / \href{https://github.com/n2oblife/CTranslate2_deeplima}{developing the \textbf{inference using an optimized C++ engine}} to achieve a high frequency of tokens computed / integrating my work into \href{https://github.com/aymara/lima}{their multilingual NLP model} / focusing on the \textbf{documentation and sustainability of the work}.} \\
+    & {\tiny \ding{110}} \textit{Project : Researching a \textbf{state-of-the-art Transformer based NLP model} from Stanford studies / \href{https://github.com/n2oblife/OpenNMT-py_deeplima}{developing its training pipeline in Python using Adapter technology and implementating its conversion in C++} / training the model with CEA's cluster / \href{https://github.com/n2oblife/CTranslate2_deeplima}{developing the \textbf{inference using an optimized C++ engine}} to achieve a high frequency of tokens computed / integrating my work into \href{https://github.com/aymara/lima}{their multilingual NLP model} / focusing on the \textbf{documentation and sustainability of the work}} \\
 \end{tabular}
+\else 
+{\color{black} \textbf{Research Assistant Intern}} \hspace{5mm} \MYhref[myOrange]{https://list.cea.fr/fr/}{\textbf{CEA List}} \hfill {\color{black} \textbf{April 2023 - August 2023}}\\ \vspace{1mm}
+\begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
+    & {\tiny \ding{110}} \textit{A research institute that focuses on digital systems to drive business competitiveness. Its Text and Image Analysis Laboratory studies Deep Learning models, their improvement and their use.} \\
+    & {\tiny \ding{110}} \textit{Project : Researching a \textbf{state-of-the-art Transformer based NLP model} from Stanford studies / \href{https://github.com/n2oblife/OpenNMT-py_deeplima}{developing its training pipeline in Python using Adapter technology and implementating its conversion in C++} / training the model with CEA's cluster / \href{https://github.com/n2oblife/CTranslate2_deeplima}{developing the \textbf{inference using an optimized C++ engine}} to achieve a high frequency of tokens computed / integrating my work into \href{https://github.com/aymara/lima}{their multilingual NLP model} / focusing on the \textbf{documentation and sustainability of the work}} \\
+\end{tabular}
+\fi
+
 
 % ResEl
+\if \mainExp0
 {\color{black} \textbf{Network Administrator, Secretary, Training Manager}} \hspace{5mm} \MYhref[myOrange]{https://resel.fr/}{\textbf{ResEl}} \hfill {\color{black}\textbf{2021 - 2023}}\\ \vspace{1mm}
 \begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
     & {\tiny \ding{110}} \textit{A technical association providing a network of +3K machines across two campuses on different cities, and enabling members to acquire essential technological skills. } \\
@@ -24,14 +50,25 @@
     & {\tiny \ding{110}} \textit{Organizing events such as the Google Hash code and the FedeRez Days and seting training programs for students to learn from the basis of IT to advanced network skills.} \\
     & {\tiny \ding{110}} \textit{Project : \textbf{Development of an inverter monitoring tool}} \\
 \end{tabular}
+\else
+{\color{black} \textbf{Network Administrator, Secretary, Training Manager}} \hspace{5mm} \MYhref[myOrange]{https://resel.fr/}{\textbf{ResEl}} \hfill {\color{black}\textbf{2021 - 2023}}\\ \vspace{1mm}
+\begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
+    & {\tiny \ding{110}} \textit{A technical association providing a network of +3K machines across two campuses on different cities, and enabling members to acquire essential technological skills. } \\
+    & {\tiny \ding{110}} \textit{Learning the ins and outs of project management in the field of network engineering as a \textbf{manager of a team of student administrators}. I also \textbf{ensured the legal framework of the association} and its events especially when planned with professional partners as board member.} \\
+    & {\tiny \ding{110}} \textit{Organizing events such as the Google Hash code and the FedeRez Days and seting training programs for students to learn from the basis of IT to advanced network skills.} \\
+    & {\tiny \ding{110}} \textit{Project : \textbf{Development of an inverter monitoring tool}} \\
+\end{tabular}
+\fi
 
 %PostExo
+\if \mainExp0
 {\color{black} \textbf{Right hand of the CEO}} \hspace{5mm} \MYhref[myOrange]{https://postexo.com/}{\textbf{PostExo}} \hfill {\color{black}\textbf{February 2022}}\\ \vspace{1mm}
 \begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
     & {\tiny \ding{110}} \textit{Automation of the registering process using the website and Zapier to schedule meetings} \\
     & {\tiny \ding{110}} \textit{Process automation and website redesign} \\
     & {\tiny \ding{110}} \textit{Establishment of communication strategies using social media / website redesign with more flexible architecture thought to be adaptable}
 \end{tabular}
+\fi
 
 %UberEats previous
 %\begin{tabular}{p{\dateCol} >{\raggedright\arraybackslash}p{\infoCol}}
@@ -39,10 +76,12 @@
 %\end{tabular}
 
 %Institut Curie
+\if \mainExp0
 {\color{black} \textbf{Research Assistant Intern}} \hspace{5mm} \MYhref[myOrange]{https://curie.fr/}{\textbf{Institut Curie}} \hfill {\color{black}\textbf{January 2015 - June 2015}}\\ \vspace{1mm}
 \begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
     & {\tiny \ding{110}} \textit{Shadowing researchers once a week, performing basic manipulations to maintain growth of cultures and electrophorese to split the groups according to genes presence, and delivering presentations on the results and on the work performed}
 \end{tabular}
+\fi
 
 %SIMULANDS previous
 % \begin{tabular}{p{\dateCol} >{\raggedright\arraybackslash}p{\infoCol}}
