--- a/sections/header.tex
+++ b/sections/header.tex
@@ -4,9 +4,10 @@
 % \end{center}
 %\newcommand{\jobTitle}{an Engineer }
 \begin{center}
-    {\Large {\color{black}\textbf{M2 Engineering Student looking for an internship}}}
+    {\LARGE {\color{black}\textbf{Complete curriculum vitae}}}
+    % {\LARGE {\color{black}\textbf{M.Sc 2nd year  Student applying for the position of}}}
 \end{center}
-\vspace{-2mm}
-\begin{center}
-    {\Large {\color{black}\textbf{as \jobTitle starting from April 2024}}}
-\end{center}
+% \vspace{-2mm}
+% \begin{center}
+%     {\LARGE {\color{black}\textbf{\jobTitle starting March 2024}}}
+% \end{center}
