--- a/sections/informatiques.tex
+++ b/sections/informatiques.tex
@@ -9,21 +9,22 @@
 \vspace{-6mm}
 \begin{itemize}[noitemsep]
     \item[\tiny\ding{110}] \textit{Python, SQL, R, Matlab}
-    \item[\tiny\ding{110}] \textit{Java, C/C++, CMake}
+    \item[\tiny\ding{110}] \textit{Java, C/C++, Rust, CMake}
     \item[\tiny\ding{110}] \textit{Linux, bash, PowerShell}
+    \item[\tiny\ding{110}] \textit{VHDL RTL, TCL, FPGA, SystemC, RaspberryPi, ZedBoard}
     \item[\tiny\ding{110}] \textit{PyTorch, LibTorch, AdapterHub}
-    % \item[\tiny\ding{110}] \textit{sklearn}
-    %\item[\tiny\ding{110}] \textit{Trankit, OpenNMT, SpaCy, CTranslate2, Stanza}
+    \item[\tiny\ding{110}] \textit{sklearn}
+    \item[\tiny\ding{110}] \textit{Trankit, OpenNMT, SpaCy, CTranslate2, Stanza}
+    \item[\tiny\ding{110}] \textit{OpenMP, SIMD, Cuda}
     \item[\tiny\ding{110}] \textit{OpenCV (C++)}
-    \item[\tiny\ding{110}] \textit{Parallele Computing, Cuda}
-    \item[\tiny\ding{110}] \textit{VHDL, FPGA, RaspberryPi, ZedBoard}
     \item[\tiny\ding{110}] \textit{Unity, C\#, Hololens}
-    \item[\tiny\ding{110}] \textit{Network, Sysadmin, Cisco}
-    %\item[\tiny\ding{110}] \textit{HTML, CSS, Javascript, Bootstrap, Wordpress}
+    \item[\tiny\ding{110}] \textit{Network, Sysadmin, SNMP, Cisco}
+    \item[\tiny\ding{110}] \textit{HTML, CSS, Javascript, Bootstrap, Wordpress}
     \item[\tiny\ding{110}] \textit{gitlab, CI/CD, Docker}
-    %\item[\tiny\ding{110}] \textit{JetBrains Rider / Pycharm}
+    \item[\tiny\ding{110}] \textit{JetBrains Rider / Pycharm}
     \item[\tiny\ding{110}] \textit{Graphic and CLI debugging}
-    % \item[\tiny\ding{110}] \textit{Azure}
+    \item[\tiny\ding{110}] \textit{Azure}
+    %\item[\tiny\ding{110}] \textit{Basics of RF antenna}
 \end{itemize}
 
 \vspace{2mm}
