--- a/sections/variables.tex
+++ b/sections/variables.tex
@@ -1,5 +1,9 @@
 % This document manages the variables in the CV and needs to be put before each use if the variable
 
-\newcommand{\jobTitle}{a Graphic Programmer }
+\newcommand{\jobTitle}{ }
+\newcommand{\papers}{0}
 \newcommand{\recherche}{0}
-\newcommand{\reco}{1}
+\newcommand{\photo}{0}
+\newcommand{\mainExp}{0}
+\newcommand{\recoSEH}{0}
+\newcommand{\recoSimulands}{0}
