--- a/sections/Recherche/publications.tex
+++ b/sections/Recherche/publications.tex
@@ -1,8 +1,9 @@
-\vspace{5mm}
-{\fontsize{12}{10}\selectfont \color{black} \textbf{Publications}}
-\newline
+{\fontsize{15}{10}\selectfont \color{black} \textbf{Papers}}
 
-\begin{tabular}{p{2.5cm} >{\raggedright\arraybackslash}p{10cm}}
-    Depuis 2021 & {\color{black} \vspace{-3mm} \textbf{Vice-président}} \hspace{5mm} {\color{myOrange} \textbf{BDA}} \\
-        & {\tiny \ding{110}} \textit{Gestion d'une équipe de 15 personnes : concerts, évènements, voyages culturel et gestions des clubs}
+% Papiers IMT 
+{\color{black} \textbf{Vice-President}} \hspace{5mm} \MYhref[myOrange]{https://www.facebook.com/BdaIMTAtlantiqueBrest}{\textbf{Arts Committee}} \hfill {\color{black}\textbf{2021 - 2022}}\\ \vspace{1mm}
+\begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
+    & {\tiny \ding{110}} \textit{The Art Commitee is the organization which manages events and clubs on the campus. The Bureau is elected by students according to the capacity of a team to conduct art oriented events.} \\
+    & {\tiny \ding{110}} \textit{I \textbf{managed a team of 18 students} with respective broad roles. I managed this team through my term and filled paper to ensure the legal framework and security of all the events.} \\
+    & {\tiny \ding{110}} \textit{The events : concerts by students and local musicians, western France cultural events, a week of artistic events with local performers, a cultural trip in Amsterdam for 90 students.}
 \end{tabular}
